--- a/src/Weather.css
+++ b/src/Weather.css
@@ -21,7 +21,7 @@
 }
 
 .temperature {
-    font-size: 69px;
+    font-size: 60px;
 }
 
 #unit {
@@ -106,8 +106,24 @@ a {
     bottom: calc(50% - .5em);
 }
 
+@media (max-width: 576px) {
+    .weather{
+        width: 370px;
+        margin: 0 auto;
+        border-radius: 0;
+    }
 
+    #forecast {
+        width: 300px;
+        margin: 0 auto;
+        margin-top: 10px;
+    }
 
+    #each-day {
+        display: ruby;
+       
+    }
+}
 
     
 
