update search form

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -120,9 +120,14 @@ a {
     }
 
     #each-day {
-        display: ruby;
-       
+        display: ruby;  
     }
+
+    .form-control {
+        width: 160px;
+    }
+
+    
 }
 
     
